src/utils/first/snapshots/context_free__utils__first__test__case_1.snap
---
source: src/utils/first/mod.rs
expression: first.tabled()
---
+------+-----------+
| Term | First(X)  |
+------+-----------+
| <E>  | '(', 'id' |
+------+-----------+
| <E'> | '+', 'ε'  |
+------+-----------+
| <P>  | '∀', '∃'  |
+------+-----------+
| <Q>  | '∀', '∃'  |
+------+-----------+
| <R>  | '(', 'id' |
+------+-----------+
| <T>  | '(', 'id' |
+------+-----------+
