src/utils/first/snapshots/context_free__utils__first__test__it_works.snap
---
source: src/utils/first/mod.rs
expression: first.tabled()
---
+------+-----------+
| Term | First(X)  |
+------+-----------+
| <E>  | '(', 'id' |
+------+-----------+
| <E'> | '+', 'ε'  |
+------+-----------+
| <F>  | '(', 'id' |
+------+-----------+
| <T>  | '(', 'id' |
+------+-----------+
| <T'> | '*', 'ε'  |
+------+-----------+
